# LogicPuzzleSolver

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  main.cpp
lpslib/: CMakeLists.txt
lpslib/autotests/: CMakeLists.txt  testMask.cpp  testSolver.cpp
lpslib/base/: cell.cpp  cell.h  solver.cpp  solver.h  solverlist.cpp  solverlist.h
lpslib/solver/: sudoku.cpp  sudoku.h
ui/: CMakeLists.txt  cellq.cpp  cellq.h  config.cpp  config.h  mainui.cpp  mainui.h  solverq.cpp  solverq.h
